[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"

[dependencies]


[[bin]]
name = "01a"

[[bin]]
name = "01b"

[[bin]]
name = "02a"

[[bin]]
name = "02b"

[[bin]]
name = "03a"

[[bin]]
name = "03b"

[[bin]]
name = "04a"

[[bin]]
name = "04b"

[[bin]]
name = "05a"

[[bin]]
name = "05b"

[[bin]]
name = "06a"

[[bin]]
name = "06b"

[[bin]]
name = "07a"

[[bin]]
name = "07b"

[[bin]]
name = "08a"

[[bin]]
name = "08b"

[[bin]]
name = "09a"

[[bin]]
name = "09b"

[[bin]]
name = "10a"

[[bin]]
name = "10b"

[[bin]]
name = "11a"

[[bin]]
name = "11b"

[[bin]]
name = "12a"

[[bin]]
name = "12b"
